Bug 1100502: about:webrtc e10s fix. Content and chrome connections are reported. r=rjesup